--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link ref="stylesheet" href="style.html">
+    <link ref="stylesheet" href="/assets/styles/style.css">
     <title>Document</title>
 
 </head>
 <body>
-    
+    <button>log in</button>
 </body>
 </html>
